workspace/edrom_ws/log/build_2025-09-25_21-24-10/calculator/stderr.log
  File "/my_workspace/edrom_ws/install/calculator/lib/python3.10/site-packages/calculator/client_node.py", line 26
    rclpy.spin_until_future_complete(self, self.future)) 
                                                       ^
SyntaxError: unmatched ')'

